--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,8 @@
     <title>Index</title>
   </head>
   <body>
+    <h1>Practice 2</h1>
+
     <h1 class="text-primary">Practice</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
   </body>
